--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
     "persistant": false
   },
   "browser_action": {
-    "default_popup": "src/popup.html",
+    "default_popup": "src/popup/popup.html",
     "default_icon": {
       "16": "src/images/maria_16x16.png",
       "32": "src/images/maria_32x32.png",
@@ -25,7 +25,7 @@
       "128": "src/images/maria_128x128.png"
     }
   },
-  "options_page": "src/options.html",
+  "options_page": "src/options/options.html",
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
