--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@types/chrome": "0.0.98",
+    "@types/file-saver": "^2.0.1",
+    "@types/jszip": "^3.1.7",
     "@types/node": "^13.7.7",
     "awesome-typescript-loader": "^5.2.1",
     "copy-webpack-plugin": "^5.1.1",
@@ -59,5 +61,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "file-saver": "^2.0.2",
+    "jszip": "^3.2.2"
+  }
 }
