--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,15 @@
     "sourceMap": false,
     "types": ["@types/chrome", "node"],
     "typeRoots": ["node_modules/@types"],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "lib": ["es2017", "dom"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
   },
-  "include": ["src/background", "src/contentscript"]
+  "include": ["src/"],
+  "exclude": ["dist/"]
 }
