--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "esnext",
     "sourceMap": false,
     "types": ["@types/chrome", "node"],
     "typeRoots": ["node_modules/@types"],
