--- a/package.json
+++ b/package.json
@@ -36,31 +36,32 @@
   "homepage": "https://github.com/bakuzan/maria#readme",
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@types/chrome": "0.0.100",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@types/chrome": "0.0.102",
     "@types/jszip": "^3.1.7",
-    "@types/node": "^13.9.1",
+    "@types/node": "^12.12.31",
+    "@types/sortablejs": "^1.10.2",
     "awesome-typescript-loader": "^5.2.1",
-    "copy-webpack-plugin": "^5.1.1",
     "cpy-cli": "^3.1.0",
     "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^4.0.1",
     "husky": "^4.2.3",
-    "lint-staged": "^10.0.8",
+    "lint-staged": "^10.0.9",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.2",
     "sass-loader": "^8.0.2",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.8.1",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.2.0",
     "typescript": "^3.8.3",
-    "webextension-polyfill": "^0.6.0",
-    "webextension-polyfill-ts": "^0.13.0",
-    "webpack": "^4.42.0",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "jszip": "^3.2.2"
+    "jszip": "^3.2.2",
+    "sortablejs": "^1.10.2",
+    "webextension-polyfill-ts": "^0.14.0"
   }
 }
