--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "@types/node": "^12.12.31",
     "@types/sortablejs": "^1.10.2",
     "awesome-typescript-loader": "^5.2.1",
-    "cpy-cli": "^3.1.0",
+    "cpy-cli": "^3.1.1",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.0.1",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.9",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.2",
     "sass-loader": "^8.0.2",
     "ts-node": "^8.8.1",
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "jszip": "^3.2.2",
+    "rss-parser": "^3.8.0",
     "sortablejs": "^1.10.2",
     "webextension-polyfill-ts": "^0.14.0"
   }
