--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "prebuild": "npm run clean",
     "build": "env NODE_ENV=production webpack --config webpack.config.js",
     "prewatch": "npm run clean",
-    "watch": "env NODE_ENV=development webpack --config webpack.config.js -w"
+    "watch": "env NODE_ENV=development webpack --config webpack.config.js -w",
+    "test": "jest",
+    "test:watch": "jest -o --watch",
+    "test:coverage": "jest --coverage"
   },
   "lint-staged": {
     "{,src}/**/*.{ts,js}": [
@@ -20,7 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && npm run test"
     }
   },
   "repository": {
@@ -38,6 +41,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@types/chrome": "0.0.123",
+    "@types/jest": "^26.0.16",
     "@types/jszip": "^3.4.1",
     "@types/node": "^14.11.1",
     "@types/sortablejs": "^1.10.6",
@@ -46,11 +50,17 @@
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.4.0",
     "mini-css-extract-plugin": "^0.11.2",
+    "mockzilla": "^0.9.0",
+    "mockzilla-webextension": "^0.9.0",
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "sass-loader": "^10.0.2",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
