--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/chrome": "0.0.123",
     "@types/jest": "^26.0.16",
     "@types/jszip": "^3.4.1",
+    "@types/luxon": "^1.25.0",
     "@types/node": "^14.11.1",
     "@types/sortablejs": "^1.10.6",
     "awesome-typescript-loader": "^5.2.1",
@@ -71,6 +72,7 @@
   },
   "dependencies": {
     "jszip": "^3.5.0",
+    "luxon": "^1.25.0",
     "rss-parser": "^3.9.0",
     "sortablejs": "^1.10.2",
     "webextension-polyfill-ts": "^0.20.0"
