--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "watch": "env NODE_ENV=development webpack --config webpack.config.js -w",
     "test": "jest",
     "test:watch": "jest -o --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "{,src}/**/*.{ts,js}": [
@@ -38,43 +39,43 @@
   },
   "homepage": "https://github.com/bakuzan/maria#readme",
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@types/chrome": "0.0.123",
-    "@types/jest": "^26.0.16",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@types/chrome": "0.0.145",
+    "@types/jest": "^26.0.23",
     "@types/jszip": "^3.4.1",
-    "@types/luxon": "^1.25.0",
-    "@types/node": "^14.11.1",
+    "@types/luxon": "^1.27.0",
+    "@types/node": "^15.12.4",
     "@types/sortablejs": "^1.10.6",
     "awesome-typescript-loader": "^5.2.1",
     "cpy-cli": "^3.1.1",
-    "css-loader": "^4.3.0",
-    "html-webpack-plugin": "^4.4.1",
-    "husky": "^4.3.0",
-    "jest": "^26.6.3",
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
+    "jest": "^27.0.5",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^10.4.0",
-    "mini-css-extract-plugin": "^0.11.2",
+    "lint-staged": "^11.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
     "node-fetch": "^2.6.1",
-    "node-sass": "^4.14.1",
-    "prettier": "^2.1.2",
-    "sass-loader": "^10.0.2",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
+    "node-sass": "^6.0.0",
+    "prettier": "^2.3.1",
+    "sass-loader": "^12.1.0",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "^4.0.3",
+    "typescript": "^4.3.4",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "jszip": "^3.5.0",
-    "luxon": "^1.25.0",
-    "rss-parser": "^3.9.0",
-    "sortablejs": "^1.10.2",
-    "webextension-polyfill-ts": "^0.20.0"
+    "jszip": "^3.6.0",
+    "luxon": "^1.27.0",
+    "rss-parser": "^3.12.0",
+    "sortablejs": "^1.13.0",
+    "webextension-polyfill-ts": "^0.25.0"
   }
 }
