--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "maria",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Utility extension for personal use.",
   "scripts": {
+    "start": "echo 'To run the app in dev mode use: npm run watch'",
     "lint": "tslint --fix -c tslint.json 'src/**/*.ts{,x}'",
     "clean": "rm -rf dist && cpy manifest.json dist && cpy src/assets/* dist/assets",
     "prebuild": "npm run clean",
@@ -41,41 +42,48 @@
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
     "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@types/chrome": "0.0.145",
-    "@types/jest": "^26.0.23",
+    "@types/chrome": "0.0.154",
+    "@types/jest": "^26.0.24",
     "@types/jszip": "^3.4.1",
-    "@types/luxon": "^1.27.0",
-    "@types/node": "^15.12.4",
-    "@types/sortablejs": "^1.10.6",
-    "awesome-typescript-loader": "^5.2.1",
+    "@types/luxon": "^2.0.0",
+    "@types/node": "^16.4.13",
+    "@types/sortablejs": "^1.10.7",
+    "buffer": "^6.0.3",
     "cpy-cli": "^3.1.1",
-    "css-loader": "^5.2.6",
-    "html-webpack-plugin": "^5.3.1",
-    "husky": "^6.0.0",
-    "jest": "^27.0.5",
+    "css-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.3.2",
+    "html-webpack-plugin": "^5.3.2",
+    "https-browserify": "^1.0.0",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^11.0.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "mockzilla": "^0.9.0",
-    "mockzilla-webextension": "^0.9.0",
+    "lint-staged": "^11.1.2",
+    "mini-css-extract-plugin": "^2.2.0",
+    "mockzilla": "^0.11.2",
+    "mockzilla-webextension": "^0.11.0",
     "node-fetch": "^2.6.1",
-    "node-sass": "^6.0.0",
-    "prettier": "^2.3.1",
+    "node-sass": "^6.0.1",
+    "prettier": "^2.3.2",
     "sass-loader": "^12.1.0",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "timers-browserify": "^2.0.12",
+    "ts-jest": "^27.0.4",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "^4.3.4",
-    "webpack": "^4.44.2",
+    "typescript": "^4.3.5",
+    "url": "^0.11.0",
+    "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "jszip": "^3.6.0",
-    "luxon": "^1.27.0",
+    "jszip": "^3.7.1",
+    "luxon": "^2.0.2",
     "rss-parser": "^3.12.0",
-    "sortablejs": "^1.13.0",
-    "webextension-polyfill-ts": "^0.25.0"
+    "sortablejs": "^1.14.0",
+    "webextension-polyfill-ts": "^0.26.0"
   }
 }
