--- a/package.json
+++ b/package.json
@@ -40,51 +40,52 @@
   },
   "homepage": "https://github.com/bakuzan/maria#readme",
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
-    "@types/chrome": "0.0.163",
-    "@types/jest": "^27.0.2",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+    "@types/chrome": "0.0.206",
+    "@types/jest": "^27.5.2",
     "@types/jszip": "^3.4.1",
-    "@types/luxon": "^2.0.6",
-    "@types/node": "^16.11.7",
-    "@types/sortablejs": "^1.10.7",
+    "@types/luxon": "^2.4.0",
+    "@types/node": "^18.11.18",
+    "@types/sortablejs": "^1.15.0",
+    "@types/webextension-polyfill": "^0.9.2",
     "buffer": "^6.0.3",
     "cpy-cli": "^3.1.1",
-    "css-loader": "^6.5.1",
-    "fork-ts-checker-webpack-plugin": "^6.4.0",
+    "css-loader": "^6.7.3",
+    "fork-ts-checker-webpack-plugin": "^6.5.2",
     "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
+    "husky": "^8.0.3",
+    "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^11.2.6",
-    "mini-css-extract-plugin": "^2.4.4",
+    "lint-staged": "^13.1.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "mockzilla": "^0.12.0",
     "mockzilla-webextension": "^0.13.0",
-    "node-fetch": "^3.2.10",
-    "node-sass": "^7.0.0",
-    "prettier": "^2.4.1",
+    "node-fetch": "^3.3.0",
+    "node-sass": "^8.0.0",
+    "prettier": "^2.8.2",
     "process": "^0.11.10",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^13.2.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "timers-browserify": "^2.0.12",
-    "ts-jest": "^27.0.7",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
+    "ts-jest": "^27.1.5",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.9.4",
     "url": "^0.11.0",
-    "webpack": "^5.62.1",
-    "webpack-cli": "^4.9.1"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "jszip": "^3.7.1",
-    "luxon": "^2.1.1",
+    "jszip": "^3.10.1",
+    "luxon": "^2.5.2",
     "rss-parser": "^3.12.0",
-    "sortablejs": "^1.14.0",
-    "webextension-polyfill-ts": "^0.26.0"
+    "sortablejs": "^1.15.0",
+    "webextension-polyfill": "^0.10.0"
   }
 }
