--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,8 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["assets/*"]
+      "resources": ["assets/*"],
+      "matches": ["<all_urls>"]
     }
   ],
   "content_security_policy": {
