Move to eslint. Sort out linting errors

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     "unlimitedStorage",
     "scripting"
   ],
-  "host_permissions": ["http://*/*", "https://*/*"],
+  "host_permissions": ["*://*/*", "http://*/*", "https://*/*"],
   "background": {
     "service_worker": "background.js"
   },
