--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utility extension for personal use.",
   "scripts": {
     "start": "echo 'To run the app in dev mode use: npm run watch'",
-    "lint": "tslint --fix -c tslint.json 'src/**/*.ts{,x}'",
+    "lint": "eslint --fix -c .eslintrc.js 'src/**/*.ts{,x}'",
     "clean": "rm -rf dist && cpy manifest.json dist && cpy src/assets/* dist/assets",
     "prebuild": "npm run clean",
     "build": "env NODE_ENV=production webpack --config webpack.config.js",
@@ -13,7 +13,7 @@
     "test": "jest",
     "test:watch": "jest -o --watch",
     "test:coverage": "jest --coverage",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "lint-staged": {
     "{,src}/**/*.{ts,js}": [
@@ -40,53 +40,53 @@
   },
   "homepage": "https://github.com/bakuzan/maria#readme",
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@types/chrome": "0.0.246",
-    "@types/jest": "^29.5.5",
-    "@types/jszip": "^3.4.1",
-    "@types/luxon": "^2.4.0",
-    "@types/node": "^18.17.19",
-    "@types/sortablejs": "^1.15.2",
-    "@types/webextension-polyfill": "^0.10.3",
+    "@types/chrome": "0.0.283",
+    "@types/jest": "^29.5.14",
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^22.9.3",
+    "@types/sortablejs": "^1.15.8",
+    "@types/webextension-polyfill": "^0.12.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "buffer": "^6.0.3",
-    "cpy-cli": "^3.1.1",
-    "css-loader": "^6.8.1",
-    "fork-ts-checker-webpack-plugin": "^6.5.3",
-    "html-webpack-plugin": "^5.5.3",
+    "cpy-cli": "^5.0.0",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^50.5.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "html-webpack-plugin": "^5.6.3",
     "https-browserify": "^1.0.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^14.0.1",
-    "mini-css-extract-plugin": "^2.7.6",
+    "lint-staged": "^15.2.10",
+    "mini-css-extract-plugin": "^2.9.2",
     "mockzilla": "^0.14.0",
     "mockzilla-webextension": "^0.15.0",
     "node-fetch": "^3.3.2",
-    "node-sass": "^9.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.3.3",
     "process": "^0.11.10",
-    "sass-loader": "^13.3.2",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "timers-browserify": "^2.0.12",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "^5.2.2",
-    "url": "^0.11.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^4.10.0"
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
+    "url": "^0.11.4",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "jest-environment-jsdom": "^29.7.0",
     "jszip": "^3.10.1",
-    "luxon": "^2.5.2",
+    "luxon": "^3.5.0",
     "rss-parser": "^3.13.0",
-    "sortablejs": "^1.15.0",
-    "webextension-polyfill": "^0.10.0"
+    "sortablejs": "^1.15.3",
+    "webextension-polyfill": "^0.12.0"
   }
 }
