Get favicons the way extensions want you to; Toggle for whether or not to check for feeds; Move background audio in a popup, update to offscreen when ready

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     "contextMenus",
     "downloads",
     "unlimitedStorage",
-    "scripting"
+    "scripting",
+    "favicon"
   ],
   "host_permissions": ["http://*/*", "https://*/*"],
   "background": {
@@ -40,8 +41,9 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["assets/*"],
-      "matches": ["<all_urls>"]
+      "resources": ["assets/*", "_favicon/*"],
+      "matches": ["<all_urls>"],
+      "extension_ids": ["*"]
     }
   ],
   "content_security_policy": {
